--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
@@ -65,6 +66,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
