--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@sindresorhus/slugify": "^2.2.1",
     "better-auth": "^1.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,6 +51,7 @@
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.9.16",
+    "nuqs": "^2.3.0",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
