--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -57,7 +57,9 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-image-crop": "^11.0.7",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
