--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -60,6 +60,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-image-crop": "^11.0.7",
+    "react-qr-code": "^2.0.15",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
