--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -52,7 +52,7 @@
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.9.16",
-    "nuqs": "^2.3.0",
+    "nuqs": "^2.3.1",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
@@ -66,6 +66,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.5",
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
