--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@sindresorhus/slugify": "^2.2.1",
+    "@tanstack/react-query": "^5.64.1",
     "better-auth": "^1.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
