--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "embla-carousel-react": "^8.5.2",
+    "google-libphonenumber": "^3.2.40",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
@@ -61,6 +62,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-image-crop": "^11.0.7",
+    "react-phone-number-input": "^3.4.11",
     "react-qr-code": "^2.0.15",
     "react-resizable-panels": "^2.1.7",
     "react-timer-hook": "^3.0.8",
@@ -77,6 +79,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tanstack/eslint-plugin-query": "^5.62.16",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
