--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@sindresorhus/slugify": "^2.2.1",
     "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-table": "^8.20.6",
     "better-auth": "^1.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
