--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.731.1",
+    "@aws-sdk/s3-request-presigner": "^3.731.1",
     "@better-fetch/fetch": "^1.1.12",
     "@dnd-kit/core": "^6.3.1",
     "@hookform/resolvers": "^3.10.0",
@@ -69,6 +71,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-timer-hook": "^3.0.8",
     "recharts": "^2.15.0",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
