--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -14,6 +14,7 @@
     "@better-fetch/fetch": "^1.1.12",
     "@dnd-kit/core": "^6.3.1",
     "@hookform/resolvers": "^3.10.0",
+    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -44,7 +45,7 @@
     "@sindresorhus/slugify": "^2.2.1",
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-table": "^8.20.6",
-    "better-auth": "^1.1.11",
+    "better-auth": "^1.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -83,6 +84,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^9.4.0",
     "@tanstack/eslint-plugin-query": "^5.62.16",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/node": "^20",
