--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -45,6 +45,9 @@
     "@sindresorhus/slugify": "^2.2.1",
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-table": "^8.20.6",
+    "@tiptap/pm": "^2.11.2",
+    "@tiptap/react": "^2.11.2",
+    "@tiptap/starter-kit": "^2.11.2",
     "better-auth": "^1.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -85,6 +88,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^9.4.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.62.16",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/node": "^20",
