--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -48,6 +48,7 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "axios": "^1.7.9",
     "better-auth": "^1.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
