--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.1",
     "lucide-react": "^0.469.0",
+    "motion": "^12.0.5",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
     "phosphor-react": "^1.4.1",
