--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -60,6 +60,7 @@
     "google-libphonenumber": "^3.2.40",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
+    "mime-types": "^2.1.35",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.9.16",
@@ -92,6 +93,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.62.16",
     "@types/google-libphonenumber": "^7.4.30",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
