--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -61,6 +61,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "mime-types": "^2.1.35",
+    "motion": "^12.0.5",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.9.16",
