--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -107,5 +107,8 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
