feat(webapp): enhance time tracking features; add detailed view with statistics and table, integrate React Query Devtools, and update dependencies

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -43,7 +43,8 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "@tanstack/react-table": "^8.20.6",
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
