--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -12,6 +12,9 @@
     "@aws-sdk/client-s3": "^3.731.1",
     "@aws-sdk/s3-request-presigner": "^3.731.1",
     "@better-fetch/fetch": "^1.1.12",
+    "@blocknote/core": "^0.23.1",
+    "@blocknote/mantine": "^0.23.1",
+    "@blocknote/react": "^0.23.1",
     "@dnd-kit/core": "^6.3.1",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
