--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -94,6 +94,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^9.4.0",
     "@tailwindcss/typography": "^0.5.16",
