--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -78,6 +78,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-image-crop": "^11.0.7",
+    "react-intersection-observer": "^9.15.1",
     "react-phone-number-input": "^3.4.11",
     "react-qr-code": "^2.0.15",
     "react-resizable-panels": "^2.1.7",
